--- a/src/themes/index.component.html
+++ b/src/themes/index.component.html
@@ -1,1 +1,14 @@
 <app-nav></app-nav>
+<div class="index-banner">
+    <div class="container-fluid">
+        <div class="row">
+          <div class="col-sm">
+            <img src="https://cdn.worktile.com/assets/images/home/index-banner-img.png">
+          </div>
+          <div class="col-sm">
+            <div class="index-banner-title">更好的Cyno服务平台</div>
+            <div class="index-banner-desc">拥有强大的学历背景、涵盖金融工程、会计、数据统计分析、计算机等专业</div>
+          </div>
+        </div>
+      </div>
+</div>
