--- a/src/themes/nav/nav.component.html
+++ b/src/themes/nav/nav.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg fixed-top" id="nav-title" [ngClass]="{'nav-scrolled-shadow': scrolled}">
-    <a class="navbar-brand" href="javascript:void(0)">ABS-CYNO{{scrolled}}</a>
+<nav class="navbar navbar-expand-lg fixed-top" id="nav-title" [ngClass]="{'nav-scrolled-shadow': _scrolled}">
+    <a class="navbar-brand" href="javascript:void(0)">ABS-CYNO</a>
     
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarContent">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="javascript:void(0)" (click)="this.scrolled = true">产品介绍</a>
+                    <a class="nav-link" href="javascript:void(0)">产品介绍</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="javascript:void(0)">价格方案</a>
