--- a/src/themes/index.component.html
+++ b/src/themes/index.component.html
@@ -1,14 +1,172 @@
 <app-nav></app-nav>
-<div class="index-banner">
-    <div class="container-fluid">
-        <div class="row">
-          <div class="col-sm">
-            <img src="https://cdn.worktile.com/assets/images/home/index-banner-img.png">
-          </div>
-          <div class="col-sm">
-            <div class="index-banner-title">更好的Cyno服务平台</div>
-            <div class="index-banner-desc">拥有强大的学历背景、涵盖金融工程、会计、数据统计分析、计算机等专业</div>
-          </div>
+<index-banner></index-banner>
+
+<!-- 信息1 -->
+<div class="index-introduce-wrap" [ngClass]="{'index-introduce-show': _scrolled}">
+    <div class="introduce-content">
+        <div class="introduce-header">
+            <div class="introduce-header-title">为企业提供最专业化的数据分析咨询</div>
+            <div class="introduce-header-desc">提供哪些咨询</div>
         </div>
-      </div>
+        <div class="introduce-body">
+            <div class="container-fluid">
+               
+                <div class="row">
+
+                  <div class="col-sm">
+                    <div class="card" style="width: 18rem;">
+                        <img src="https://cdn.worktile.com/assets/images/home/index-oa-img2.png">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                      </div>
+                  </div>
+
+
+                  <div class="col-sm">
+                    <div class="card" style="width: 18rem;">
+                        <img src="https://cdn.worktile.com/assets/images/home/index-oa-img2.png">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                      </div>
+                  </div>
+
+                  <div class="col-sm">
+                    <div class="card" style="width: 18rem;">
+                        <img src="https://cdn.worktile.com/assets/images/home/index-oa-img2.png">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                      </div>
+                  </div>
+
+                </div>
+
+                <div class="row">
+                        <div class="col-sm">
+                          <div class="card" style="width: 18rem;">
+                                <img src="https://cdn.worktile.com/assets/images/home/index-oa-img2.png">
+                              <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                
+                              </div>
+                            </div>
+                        </div>
+      
+                         <div class="col-sm">
+                          <div class="card" style="width: 18rem;">
+                              <img src="https://cdn.worktile.com/assets/images/home/index-oa-img2.png">
+                              <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                
+                              </div>
+                            </div>
+                        </div>
+      
+                        <div class="col-sm">
+                          <div class="card" style="width: 18rem;">
+                                <img src="https://cdn.worktile.com/assets/images/home/index-oa-img2.png">
+                              <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                
+                              </div>
+                            </div>
+                        </div>
+      
+                      </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!--信息2-->
+    <div class="introduce-content">
+        <div class="introduce-header">
+            <div class="introduce-header-title">为企业提供最有价值的CYNO数据分析</div>
+            <div class="introduce-header-desc">提供哪些价值</div>
+        </div>
+        <div class="introduce-body">
+            <div class="container-fluid">
+               
+                <div class="row">
+
+                  <div class="col-sm">
+                    <div class="card" style="width: 18rem;">
+                        <img src="https://cdn.worktile.com/assets/images/home/index-oa-img2.png">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                      </div>
+                  </div>
+
+
+                  <div class="col-sm">
+                    <div class="card" style="width: 18rem;">
+                        <img src="https://cdn.worktile.com/assets/images/home/index-oa-img2.png">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                      </div>
+                  </div>
+
+                  <div class="col-sm">
+                    <div class="card" style="width: 18rem;">
+                        <img src="https://cdn.worktile.com/assets/images/home/index-oa-img2.png">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                      </div>
+                  </div>
+
+                </div>
+
+                <div class="row">
+                        <div class="col-sm">
+                          <div class="card" style="width: 18rem;">
+                                <img src="https://cdn.worktile.com/assets/images/home/index-oa-img2.png">
+                              <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                
+                              </div>
+                            </div>
+                        </div>
+      
+                         <div class="col-sm">
+                          <div class="card" style="width: 18rem;">
+                              <img src="https://cdn.worktile.com/assets/images/home/index-oa-img2.png">
+                              <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                
+                              </div>
+                            </div>
+                        </div>
+      
+                        <div class="col-sm">
+                          <div class="card" style="width: 18rem;">
+                                <img src="https://cdn.worktile.com/assets/images/home/index-oa-img2.png">
+                              <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                
+                              </div>
+                            </div>
+                        </div>
+      
+                      </div>
+            </div>
+        </div>
+    </div>
+
 </div>
