--- a/src/themes/index.component.scss
+++ b/src/themes/index.component.scss
@@ -1,31 +1,54 @@
-.index-banner {
-    position: fixed;
+@import "variables.scss";
+@import "mixin.scss";
+
+.index-introduce-wrap{
+    background: #FFF;
+    min-height: 100vh;
+    position: relative;
+    top: 100vh;
     left: 0px;
-    top: 0px;
-    padding-top: 100px;
-    background: #fff;
-    border-width: 0px;
-    height: 100%;
-    width: 100%;
-    padding: 150px 70px 20px 70px;
+    opacity: 1;
+    transition: all 1s ease-out,opacity 1s ease-out;
 
-    .col-sm {
-        background:#fff;
+    &.index-introduce-show {
+        opacity: 1;
     }
 
-    .index-banner-title{
-        font-size: 58px;
-        color: #485778;
-        margin-top: 77px;
+
+    .introduce-content {
+        .introduce-header{
+            padding: 20px;
+            .introduce-header-title{
+                text-align: center;
+                color: #333;
+                font-size: 42px;
+            }
+            .introduce-header-desc{
+                font-size: 16px;
+                margin-top: 10px;
+                padding-left: 5px;
+                padding-right: 5px;
+                line-height: 30px;
+                color: #a0a4ad;
+                text-align: center;
+            }
+            
+        }
+
+        .introduce-body{
+            padding: 40px 50px;
+
+            .row{
+                margin-bottom: 50px;
+                img{
+                    height: 300px;
+                }
+
+                .card{
+                    border: none;
+                }
+            }
+        }
     }
 
-    .index-banner-desc{
-        font-size: 16px;
-        margin-top: 10px;
-        padding-left: 5px;
-        padding-right: 5px;
-        line-height: 30px;
-        max-width: 500px;
-        color: #a0a4ad;
-    }
 }
