--- a/src/themes/index.component.html
+++ b/src/themes/index.component.html
@@ -10,11 +10,10 @@
         </div>
         <div class="introduce-body">
             <div class="container-fluid">
-               
                 <div class="row">
 
                   <div class="col-sm">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card index-wow slideInUp" data-wow-delay="0.15s" data-wow-duration="1s" style="width: 18rem;animation-name: slideInUp">
                         <img src="https://cdn.worktile.com/assets/images/home/index-oa-img2.png">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
@@ -25,7 +24,7 @@
 
 
                   <div class="col-sm">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card index-wow slideInUp" data-wow-delay="0.15s" data-wow-duration="1s" style="width: 18rem;">
                         <img src="https://cdn.worktile.com/assets/images/home/index-oa-img2.png">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
@@ -35,7 +34,7 @@
                   </div>
 
                   <div class="col-sm">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card index-wow slideInUp" data-wow-delay="0.15s" data-wow-duration="1s" style="width: 18rem;">
                         <img src="https://cdn.worktile.com/assets/images/home/index-oa-img2.png">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
@@ -48,7 +47,7 @@
 
                 <div class="row">
                         <div class="col-sm">
-                          <div class="card" style="width: 18rem;">
+                          <div class="card index-wow slideInUp" data-wow-delay="0.3s" data-wow-duration="0.5s" style="width: 18rem;">
                                 <img src="https://cdn.worktile.com/assets/images/home/index-oa-img2.png">
                               <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
@@ -59,7 +58,7 @@
                         </div>
       
                          <div class="col-sm">
-                          <div class="card" style="width: 18rem;">
+                          <div class="card index-wow slideInUp" data-wow-delay="0.3s" data-wow-duration="0.5s" style="width: 18rem;">
                               <img src="https://cdn.worktile.com/assets/images/home/index-oa-img2.png">
                               <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
@@ -70,7 +69,7 @@
                         </div>
       
                         <div class="col-sm">
-                          <div class="card" style="width: 18rem;">
+                          <div class="card index-wow slideInUp" data-wow-delay="0.3s" data-wow-duration="0.5s" style="width: 18rem;">
                                 <img src="https://cdn.worktile.com/assets/images/home/index-oa-img2.png">
                               <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
@@ -98,7 +97,7 @@
                 <div class="row">
 
                   <div class="col-sm">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card index-wow slideInUp" data-wow-delay="0.3s" data-wow-duration="0.5s" style="width: 18rem;">
                         <img src="https://cdn.worktile.com/assets/images/home/index-oa-img2.png">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
@@ -109,7 +108,7 @@
 
 
                   <div class="col-sm">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card index-wow slideInUp" data-wow-delay="0.3s" data-wow-duration="0.5s" style="width: 18rem;">
                         <img src="https://cdn.worktile.com/assets/images/home/index-oa-img2.png">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
@@ -119,7 +118,7 @@
                   </div>
 
                   <div class="col-sm">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card index-wow slideInUp" data-wow-delay="0.3s" data-wow-duration="0.5s" style="width: 18rem;">
                         <img src="https://cdn.worktile.com/assets/images/home/index-oa-img2.png">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
@@ -132,7 +131,7 @@
 
                 <div class="row">
                         <div class="col-sm">
-                          <div class="card" style="width: 18rem;">
+                          <div class="card index-wow slideInUp" data-wow-delay="0.3s" data-wow-duration="0.5s" style="width: 18rem;">
                                 <img src="https://cdn.worktile.com/assets/images/home/index-oa-img2.png">
                               <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
@@ -143,7 +142,7 @@
                         </div>
       
                          <div class="col-sm">
-                          <div class="card" style="width: 18rem;">
+                          <div class="card index-wow slideInUp" data-wow-delay="0.3s" data-wow-duration="0.5s" style="width: 18rem;">
                               <img src="https://cdn.worktile.com/assets/images/home/index-oa-img2.png">
                               <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
@@ -154,7 +153,7 @@
                         </div>
       
                         <div class="col-sm">
-                          <div class="card" style="width: 18rem;">
+                          <div class="card index-wow slideInUp" data-wow-delay="0.3s" data-wow-duration="0.5s" style="width: 18rem;">
                                 <img src="https://cdn.worktile.com/assets/images/home/index-oa-img2.png">
                               <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
@@ -163,8 +162,7 @@
                               </div>
                             </div>
                         </div>
-      
-                      </div>
+                    </div>
             </div>
         </div>
     </div>
