--- a/src/themes/nav/nav.component.html
+++ b/src/themes/nav/nav.component.html
@@ -23,7 +23,7 @@
                     <button type="button" class="btn btn-regist">注册</button>
                 </li>
                 <li class="nav-item">
-                    <button type="button" class="btn btn-login">登录</button>
+                    <a href="/i" class="btn btn-login">登录</a>
                 </li>
 
                 </ul>
