--- a/src/themes/nav/nav.component.html
+++ b/src/themes/nav/nav.component.html
@@ -20,7 +20,7 @@
                     <a class="nav-link" href="javascript:void(0)">服务支持</a>
                 </li>
                 <li class="nav-item">
-                    <button type="button" class="btn btn-regist">注册</button>
+                    <a routerLink="/ii"  class="btn btn-regist">注册</a>
                 </li>
                 <li class="nav-item">
                     <a routerLink="/i"  class="btn btn-login">登录</a>
