--- a/src/themes/index2.scss
+++ b/src/themes/index2.scss
@@ -1,9 +1,187 @@
-.ddddddddddddd{
-    display: flex;
+@import "variables.scss";
+@import "mixin.scss";
+
+.cyno-header {
+    
+    background: $navbar-background;
+    font-size: $navbar-fontsize;
+    color: #a0a4ad;
+    
+    & > div:not(.line){
+        margin: $page-margin;
+    }
+
+    .cyno-navbar{
+        display: flex;
+        nav {
+            &:first-child{
+                flex: 0 0 100px
+            }
+
+            &:nth-child(2){
+                flex: 1 1 auto;
+            }
+            
+            & .nav-link, & .user-info{
+                font-size: inherit;
+                color: inherit;
+                padding: 0.5rem 0.3rem;
+                font-weight: 600;
+            }
+
+        }
+    }
+
+    .line {
+        height: 2px;
+        box-shadow: inset 0 -2px 0 rgba(209, 209, 220, 0.2), inset 0 -2px 0 rgba(60, 31, 175, 0.5);
+    }
+
+    .banner{
+        display: flex;
+        background: none;
+        padding: 10px 0px;
+        .navbar-brand {
+            font-size: 1.5rem;
+            color: inherit;
+            font-weight: 600;
+            line-height: 1rem;
+            flex:  1 1 auto;
+        }
+
+        .nav{
+            .btn-sm {
+                padding: 0.3rem;
+                font-size: inherit;
+                line-height: 1.1em;
+                border-radius: 0rem;
+     }
+
+                font-weight: 600;
+                margin-left: 5px;
+            }
+        }
+     .breadcrumb-banner{
+         height: 23px;
+        .breadcrumb{
+            background: none;
+            color: inherit;
+            padding: 0rem 0rem 2rem 0.3rem;
+            position: relative;
+            .breadcrumb-item {
+                font-size: .7rem;
+                &:first-child {
+                    i{
+                        font-size: .8rem;
+                        margin-right: 5px;
+                    }
+                }
+                + .breadcrumb-item::before{
+                    display: inline-block;
+                    padding-right: 0.2rem;
+                    padding-left: 0.2rem;
+                    font-size: inherit;
+                    color: inherit;
+                    content: ">";
+                }
+            }
+        }
+
+     }
+
+     &::before {
+        position: absolute;
+        display: inline-block;
+        width: 50px;
+        height: 100px;
+        left: 0px;
+        top: 105px;
+        background: #0808ad;
+        content: '';
+    }
+    
+    &::after {
+        position: absolute;
+        display: inline-block;
+        width: 50px;
+        height: 100px;
+        right: 0px;
+        top: 105px;
+        background: #0808ad;
+        content: '';
+    }
 }
 
-.ddddddddddddd span:first-child{
 
-    flex: 1 1 auto;;
+
+.cyno-body{
+    height: 100%;
+    margin: 100px 50px;
+    background: #fff;
+    
+    & > .card-header{
+        margin-top: 1.2rem;
+        padding: 0.75rem 1.25rem 0.3rem 1.25rem;
+        background: none;
+    }
+
+    &.card {
+        border: none;
+    }
+
+   .project-sbutitle{
+        flex: 1 1 auto;
+    }
+
+    .project-sbutitle-desc{
+        display: flex;
+        justify-content: flex-end;
+        position: relative;
+        top: -3.5rem;
+
+        & > span{
+            margin-left: .5rem;
+        }
+    }
+
+    & > .card-body {
+        
+        .card {
+            background: none;
+            border: none;
+        }
+        .card-header {
+            background: none;
+            margin-bottom: 0.2rem;
+            padding: 0rem 0rem;
+            
+            .card-title{
+                font-size: 0.8rem;
+            }
+        }
+
+        .card-body{
+            &.card-body-nopadding {
+                padding: 0rem;
+            }
+        }
+       
+        .table-sm th, .table-sm td {
+            padding: 0.3rem;
+            font-size: 0.6rem;
+        }
+        
+        .table-sm th{
+            border-bottom: none;
+            border-top: none;
+            color: #655959;
+        }
+
+        .table-sm td {
+            color: #bac3cc;
+        }
+
+
+    }
 
 }
