--- a/src/app/pages/pdcalc/components/chart/chart1.component.html
+++ b/src/app/pages/pdcalc/components/chart/chart1.component.html
@@ -1,7 +1,7 @@
-<div class="container-fluid pdcalc-chart1">
-    <div class="row">
-      <div class="col" style="padding-right: 0rem;padding-left: 0rem;">
-          <div class="card">
+<div class="container-fluid pdcalc-chart1" style="padding-right: 15px;padding-left: 15px;">
+    <div class="row" style="flex-wrap: nowrap;">
+      <div class="col" style="padding-right: 0rem;padding-left: 0rem;flex: 1 1 auto;">
+          <div class="card" style="border: 1px solid rgba(0, 0, 0, 0.125)">
               <div class="card-header">
                   <ul class="nav">
                       <li class="nav-item">
@@ -43,20 +43,85 @@
               <div class="card-body" style="padding: 0rem;position: relative; overflow: visible;">
                     <div #showRateTipDom class="tooltip fade bs-tooltip-top" style="will-change: transform; position: absolute; top: 40px; left: 0px;" x-placement="top"><div class="arrow" style="left: 51px;"></div><div class="tooltip-inner"></div></div>
                     <div #showPerTipDom class="tooltip fade bs-tooltip-top" style="will-change: transform; position: absolute; top: 70px; right: 0px;" x-placement="top"><div class="arrow" style="left: 51px;"></div><div class="tooltip-inner"></div></div>
-                    <div #sylRateChart style="height: 300px;"></div>
+                    <div #sylRateChart style="height: 360px;"></div>
               </div>
           </div>
       </div>
       
-      <div class="col" style="flex: 0 0 300px;padding-top: 2.5rem;">
+      <div class="col" style="flex: 0 0 250px;padding-top: 2.5rem; border: 1px solid rgba(0, 0, 0, 0.125)">
             <!-- right --> 
-                    <div class="card fendang-detail">
-                            <div class="card-header" style="border-bottom: none;">
-                                <h5 class="card-title">百度有钱花</h5>
-                            </div>
-                            <div class="card-body" style="padding: .25rem">
-                              <mat-tab-group>
-                                    <mat-tab label="3A">
+            <div class="card fendang-detail">
+                <div class="card-header" style="border-bottom: none;">
+                        <h5 class="card-title">百度有钱花</h5>
+                    </div>
+                    <div class="card-body" style="padding: .25rem">
+                        <mat-tab-group>
+                            <mat-tab label="3A">
+                                <div class="card">
+                                        <div class="card-body" style="padding: 3.3rem 0 0rem 0rem;">
+                                            <h6 class="card-subtitle" style="color: #bac3cc;font-size: 0.5rem;margin-bottom: 0.2rem">分档规模(万元)</h6>
+                                            <h5 class="card-title" style="font-size: 2rem;color: #62686f;">856,986.00</h5>
+                                            <div class="container-fluid" style="margin-top: 3rem;">
+                                                <div class="row">
+                                                    <div class="col-sm" style="padding-left: 0rem;padding-right:0rem;text-algin:left;">
+                                                        <div style="font-size: 0.5rem;color: #bac3cc;">还本方式</div>
+                                                        <div style="font-size: 0.5rem;color: #62686f;"> 过手型</div>
+                                                    </div>
+                                                    <div class="col-sm" style="padding-left: 0rem; padding-right: 0rem;text-align:left;">
+                                                        <div style="font-size: 0.5rem;color: #bac3cc;">到期日</div>
+                                                        <div style="font-size: 0.5rem;color: #62686f;"> 2020/01/01</div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            
+                                        </div>
+                                    </div>
+                            </mat-tab>
+                            <mat-tab label="3B1">
+                                    <div class="card">
+                                            <div class="card-body" style="padding: 3.3rem 0 0rem 0rem;">
+                                                <h6 class="card-subtitle" style="color: #bac3cc;font-size: 0.5rem;margin-bottom: 0.2rem">分档规模(万元)</h6>
+                                                <h5 class="card-title" style="font-size: 2rem;color: #62686f;">856,986.00</h5>
+                                                <div class="container-fluid" style="margin-top: 3rem;">
+                                                    <div class="row">
+                                                        <div class="col-sm" style="padding-left: 0rem;padding-right:0rem;text-algin:left;">
+                                                            <div style="font-size: 0.5rem;color: #bac3cc;">还本方式</div>
+                                                            <div style="font-size: 0.5rem;color: #62686f;"> 过手型</div>
+                                                        </div>
+                                                        <div class="col-sm" style="padding-left: 0rem; padding-right: 0rem;text-align:left;">
+                                                            <div style="font-size: 0.5rem;color: #bac3cc;">到期日</div>
+                                                            <div style="font-size: 0.5rem;color: #62686f;"> 2020/01/01</div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                
+                                            </div>
+                                        </div>   
+
+
+                            </mat-tab>
+                            <mat-tab label="3B2">
+                                    <div class="card">
+                                            <div class="card-body" style="padding: 3.3rem 0 0rem 0rem;">
+                                                <h6 class="card-subtitle" style="color: #bac3cc;font-size: 0.5rem;margin-bottom: 0.2rem">分档规模(万元)</h6>
+                                                <h5 class="card-title" style="font-size: 2rem;color: #62686f;">856,986.00</h5>
+                                                <div class="container-fluid" style="margin-top: 3rem;">
+                                                    <div class="row">
+                                                        <div class="col-sm" style="padding-left: 0rem;padding-right:0rem;text-algin:left;">
+                                                            <div style="font-size: 0.5rem;color: #bac3cc;">还本方式</div>
+                                                            <div style="font-size: 0.5rem;color: #62686f;"> 过手型</div>
+                                                        </div>
+                                                        <div class="col-sm" style="padding-left: 0rem; padding-right: 0rem;text-align:left;">
+                                                            <div style="font-size: 0.5rem;color: #bac3cc;">到期日</div>
+                                                            <div style="font-size: 0.5rem;color: #62686f;"> 2020/01/01</div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                
+                                            </div>
+                                        </div>
+                                </mat-tab>
+                                <mat-tab label="次级">
                                         <div class="card">
                                                 <div class="card-body" style="padding: 3.3rem 0 0rem 0rem;">
                                                     <h6 class="card-subtitle" style="color: #bac3cc;font-size: 0.5rem;margin-bottom: 0.2rem">分档规模(万元)</h6>
@@ -76,75 +141,10 @@
                                                     
                                                 </div>
                                             </div>
-                                    </mat-tab>
-                                    <mat-tab label="3B1">
-                                            <div class="card">
-                                                    <div class="card-body" style="padding: 3.3rem 0 0rem 0rem;">
-                                                        <h6 class="card-subtitle" style="color: #bac3cc;font-size: 0.5rem;margin-bottom: 0.2rem">分档规模(万元)</h6>
-                                                        <h5 class="card-title" style="font-size: 2rem;color: #62686f;">856,986.00</h5>
-                                                        <div class="container-fluid" style="margin-top: 3rem;">
-                                                            <div class="row">
-                                                                <div class="col-sm" style="padding-left: 0rem;padding-right:0rem;text-algin:left;">
-                                                                    <div style="font-size: 0.5rem;color: #bac3cc;">还本方式</div>
-                                                                    <div style="font-size: 0.5rem;color: #62686f;"> 过手型</div>
-                                                                </div>
-                                                                <div class="col-sm" style="padding-left: 0rem; padding-right: 0rem;text-align:left;">
-                                                                    <div style="font-size: 0.5rem;color: #bac3cc;">到期日</div>
-                                                                    <div style="font-size: 0.5rem;color: #62686f;"> 2020/01/01</div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                        
-                                                    </div>
-                                                </div>   
-
-
-                                    </mat-tab>
-                                    <mat-tab label="3B2">
-                                            <div class="card">
-                                                    <div class="card-body" style="padding: 3.3rem 0 0rem 0rem;">
-                                                        <h6 class="card-subtitle" style="color: #bac3cc;font-size: 0.5rem;margin-bottom: 0.2rem">分档规模(万元)</h6>
-                                                        <h5 class="card-title" style="font-size: 2rem;color: #62686f;">856,986.00</h5>
-                                                        <div class="container-fluid" style="margin-top: 3rem;">
-                                                            <div class="row">
-                                                                <div class="col-sm" style="padding-left: 0rem;padding-right:0rem;text-algin:left;">
-                                                                    <div style="font-size: 0.5rem;color: #bac3cc;">还本方式</div>
-                                                                    <div style="font-size: 0.5rem;color: #62686f;"> 过手型</div>
-                                                                </div>
-                                                                <div class="col-sm" style="padding-left: 0rem; padding-right: 0rem;text-align:left;">
-                                                                    <div style="font-size: 0.5rem;color: #bac3cc;">到期日</div>
-                                                                    <div style="font-size: 0.5rem;color: #62686f;"> 2020/01/01</div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                        
-                                                    </div>
-                                                </div>
-                                        </mat-tab>
-                                        <mat-tab label="次级">
-                                                <div class="card">
-                                                        <div class="card-body" style="padding: 3.3rem 0 0rem 0rem;">
-                                                            <h6 class="card-subtitle" style="color: #bac3cc;font-size: 0.5rem;margin-bottom: 0.2rem">分档规模(万元)</h6>
-                                                            <h5 class="card-title" style="font-size: 2rem;color: #62686f;">856,986.00</h5>
-                                                            <div class="container-fluid" style="margin-top: 3rem;">
-                                                                <div class="row">
-                                                                    <div class="col-sm" style="padding-left: 0rem;padding-right:0rem;text-algin:left;">
-                                                                        <div style="font-size: 0.5rem;color: #bac3cc;">还本方式</div>
-                                                                        <div style="font-size: 0.5rem;color: #62686f;"> 过手型</div>
-                                                                    </div>
-                                                                    <div class="col-sm" style="padding-left: 0rem; padding-right: 0rem;text-align:left;">
-                                                                        <div style="font-size: 0.5rem;color: #bac3cc;">到期日</div>
-                                                                        <div style="font-size: 0.5rem;color: #62686f;"> 2020/01/01</div>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                            
-                                                        </div>
-                                                    </div>
-                                        </mat-tab>
-                            </mat-tab-group>
-                        </div>
-              </div>
+                                </mat-tab>
+                    </mat-tab-group>
+                </div>
+            </div>
 
         </div>
  </div>
