--- a/src/app/pages/navbar/navbar.html
+++ b/src/app/pages/navbar/navbar.html
@@ -1,5 +1,5 @@
 <!-- navbar -->
-<div class="cyno-header fixed-top">
+<div class="cyno-header fixed-top " [ngClass]="{'scrolled': _scrolled}">
     <div class="cyno-navbar">
         <nav class="nav">
             <a class="nav-link active" href="#"><i class="fa fa-bars"></i></a>
