--- a/src/app/pages/pdcalc/components/main.component.html
+++ b/src/app/pages/pdcalc/components/main.component.html
@@ -1,4 +1,4 @@
-<div class="card cyno-body pdcalc-main">
+<div class="card cyno-body pdcalc-main function-body">
         <div class="card-header">
           <h5 class="card-title project-title">百度有钱花-天风2017年第二期资产支持专项计划</h5>
           <h6 class="card-subtitle mb-2 text-muted project-sbutitle">收益率分布测算</h6>
@@ -28,11 +28,6 @@
                                 </mat-tab>
                             </mat-tab-group>
                         </div>
-
-
-                        
-
-
                     </div>
                 </div>
         </div>
