--- a/src/themes/nav/nav.scss
+++ b/src/themes/nav/nav.scss
@@ -13,7 +13,7 @@
         .nav-item{
             padding: 5px 10px !important;
             .nav-link{
-                color: #000000;
+                color: #fff;
                 &:hover, &:focus {
                     background: transparent;
                     color: #22d7bb;
