--- a/src/themes/variables.scss
+++ b/src/themes/variables.scss
@@ -1,4 +1,4 @@
 //navbar文字大小
 $navbar-fontsize: 0.7rem;
-$navbar-background: #0808ad;
+$navbar-background:rgba(13,17,161, 1);
 $page-margin: 0px 50px;
