--- a/src/app/pages/projects/components/main.scss
+++ b/src/app/pages/projects/components/main.scss
@@ -31,4 +31,8 @@
         height: 35px;
         padding: 0 14px;
     }
+
+    .mat-paginator .mat-paginator-container{
+        justify-content:  center;
+    }
 }
