--- a/src/scss/material/toolbar.scss
+++ b/src/scss/material/toolbar.scss
@@ -3,3 +3,11 @@
         background: #fff;
     }
 }
+
+.mat-icon-button , .md-button{
+    &:hover,&:visited,&:focus{
+        border: none;
+        outline: 0;
+        background: #e9e9e9;
+    }
+}
