优化项目总览、概率分布测算

--- a/src/app/pages/navbar/navbar.html
+++ b/src/app/pages/navbar/navbar.html
@@ -41,7 +41,7 @@
         <nav>
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><i class="fa fa-home"></i>首页</li>
-                <li class="breadcrumb-item">收益率分配测算</li>
+                <li class="breadcrumb-item">{{breadcrumbTitle}}</li>
             </ol>
         </nav>
     </div>
