--- a/src/scss/material/toolbar.scss
+++ b/src/scss/material/toolbar.scss
@@ -11,3 +11,28 @@
         background: #e9e9e9;
     }
 }
+
+.cdk-overlay-container{
+    z-index: 2000;
+}
+
+.mat-jydropdown-panel .mat-option{
+    line-height: 28px;
+    height: 28px;
+    font-size:  12px;
+}
+
+.mat-jydropdown-panel .mat-option .mat-pseudo-checkbox-checked::after {
+    top: 3px;
+    left: 1px;
+    width: 12px;
+    height: 5px;
+    border-left: 2px solid currentColor;
+    transform: rotate(-45deg);
+    opacity: 1;
+}
+
+.mat-jydropdown-panel .mat-option .mat-pseudo-checkbox {
+    width: 14px;
+    height: 14px;
+}
